[gd_scene load_steps=12 format=3 uid="uid://bg51aexxrj8k7"]

[ext_resource type="FontFile" uid="uid://bkx4jb55yvtqy" path="res://barkley2/resources/fonts/fn_12ocs.tres" id="1_s4xe7"]
[ext_resource type="FontFile" uid="uid://2aae7o60ix2y" path="res://barkley2/resources/fonts/fn_dnet.tres" id="2_m16ik"]
[ext_resource type="Texture2D" uid="uid://bqsrxuyab0ka2" path="res://barkley2/assets/b2_original/images/merged/sDNETBorder0.png" id="3_14w70"]
[ext_resource type="Script" uid="uid://7f442rge3pv0" path="res://barkley2/scenes/_utilityStation/dwarfnet/post/post_pool.gd" id="4_m16ik"]
[ext_resource type="LabelSettings" uid="uid://djqk0t0trdof6" path="res://barkley2/resources/Labels/dnet_label.tres" id="4_mnglx"]
[ext_resource type="PackedScene" uid="uid://diy26rfg87es0" path="res://barkley2/scenes/_utilityStation/dwarfnet/post/option_pool_1.tscn" id="5_m7xlt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jccyt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fq16b"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="Theme" id="Theme_4427p"]
Button/fonts/font = ExtResource("1_s4xe7")
ProgressBar/fonts/font = ExtResource("2_m16ik")
ProgressBar/styles/background = SubResource("StyleBoxFlat_jccyt")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_fq16b")

[sub_resource type="AtlasTexture" id="AtlasTexture_2btve"]
atlas = ExtResource("3_14w70")
region = Rect2(0, 0, 30, 30)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8wy0f"]
texture = SubResource("AtlasTexture_2btve")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[node name="post_pool" type="PanelContainer"]
custom_minimum_size = Vector2(100, 0)
offset_right = 233.0
offset_bottom = 97.0
theme = SubResource("Theme_4427p")
theme_override_styles/panel = SubResource("StyleBoxTexture_8wy0f")
script = ExtResource("4_m16ik")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="pool_title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HOW MANY APPLE"
label_settings = ExtResource("4_mnglx")

[node name="options_list" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="option_pool_1" parent="MarginContainer/VBoxContainer/options_list" instance=ExtResource("5_m7xlt")]
layout_mode = 2
option_name = "1"
option_percent = 4

[node name="option_pool_2" parent="MarginContainer/VBoxContainer/options_list" instance=ExtResource("5_m7xlt")]
layout_mode = 2
option_name = "2"
option_percent = 24

[node name="option_pool_3" parent="MarginContainer/VBoxContainer/options_list" instance=ExtResource("5_m7xlt")]
layout_mode = 2
option_name = "3-1000"
option_percent = 52

[node name="option_pool_4" parent="MarginContainer/VBoxContainer/options_list" instance=ExtResource("5_m7xlt")]
layout_mode = 2
option_name = "???"
option_percent = 16

[node name="result_list" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="vote_btn" type="Button" parent="MarginContainer/VBoxContainer/result_list"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_m16ik")
text = "Vote"

[node name="vote_result" type="Label" parent="MarginContainer/VBoxContainer/result_list"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Total number of votes cast: 1188"
label_settings = ExtResource("4_mnglx")

[connection signal="pressed" from="MarginContainer/VBoxContainer/result_list/vote_btn" to="." method="_on_vote_btn_pressed"]
